# autonat-project

./: .gitignore  README.md
docs/: adf-false-positive.md  autonat-v2.md  avail.md  conclusions-archived.md  conclusions.md  cross-implementation-comparison.md  ethcc-home-staking-cgnat.md  final-report.md  future-work-nat-monitoring.md  go-libp2p-autonat-implementation.md  instrumentation-requirements.md  js-libp2p-autonat-implementation.md  libp2p-autonat-ecosystem.md  measurement-results.md  nat-stack-best-practices.md  nebula-autonat-analysis.md  obol.md  otel-tracing.md  planning.md  report.md  rust-libp2p-autonat-implementation.md  scenario-schema.md  symmetric-nat-silent-failure.md  testbed.md  trace-spec.md  udp-black-hole-detector.md  upnp-nat-detection.md  upstream-issues-draft.md  v1-v2-analysis.md  v1-v2-reachability-gap.md  v1-v2-state-transitions.md  v1-vs-v2-performance.md
paper/: main.tex
results/: generate_figures.py
results/local/: results-flight-2026-02-16.md  results-heathrow-2026-02-16.md  results-hotel-wifi-2026-02-19.md
results/nebula-analysis/: plot.py
testbed/: README.md  analyze.py  eval-assertions.py  go.mod  go.sum  main.go  mock_server.go  run-local-upnp.sh  run-local.sh  run-server.sh  run.py  run.sh  validate-server-nat.sh  verify-nat.sh
testbed/docker/: compose.yml
testbed/docker/node-rust/: Cargo.toml  Dockerfile
testbed/docker/node-rust/src/: main.rs
testbed/local/rust/: Cargo.toml
testbed/local/rust/src/: main.rs
testbed/scenarios/: adf-false-positive.yaml  flight-wifi.yaml  (+16 more)
testscript/: go.mod  go.sum  main.go
(+17 files in other folders)
